--- a/PopularWords/style.css
+++ b/PopularWords/style.css
@@ -57,5 +57,6 @@
     text-align:center;
     text-decoration: underline;
     color: navy;
+    font: bold;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
